fix alignment of skills section

--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ h2 {
   background-color: var(--white);
   border-radius: 3vw;
   width: 85vw;
-  height: 23vw;
+  height: 25vw;
   margin-left: auto;
   margin-right: auto;
   padding: 2.5vw;
@@ -118,8 +118,10 @@ h2 {
   display: inline-block;
   font-size: 2vw;
   color: var(--black);
-  width: 35%;
+  width: 33%;
   margin-right: 5%;
+  margin-left: 2%;
+  vertical-align: top;
 }
 
 .skillsBody {
